// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App > matches generated story visual baseline with poster layers 1`] = `
<DocumentFragment>
  <main
    class="app-shell"
    data-testid="app-shell"
  >
    <header
      class="header"
      data-testid="app-header"
    >
      <div
        class="header-brand"
      >
        <img
          alt=""
          aria-hidden="true"
          class="header-brand-icon"
          src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%20128%20128'%20role='img'%20aria-label='StoryTime'%3e%3crect%20width='128'%20height='128'%20rx='24'%20fill='%231f1d5c'/%3e%3cpath%20d='M36%2078c8-18%2020-27%2036-27%208%200%2016%203%2020%208-5-16-18-27-35-27-18%200-33%2013-36%2031-1%205-1%2010%201%2015l14%200z'%20fill='%23f6c86d'/%3e%3ccircle%20cx='88'%20cy='42'%20r='10'%20fill='%23ffe8b6'/%3e%3cpath%20d='M50%2088h32c0%206-5%2010-11%2010H61c-6%200-11-4-11-10z'%20fill='%23ffffff'/%3e%3c/svg%3e"
        />
        <h1>
          StoryTime
        </h1>
        <span
          class="tier-badge"
          data-testid="tier-badge"
        >
          Trial
        </span>
      </div>
      <div
        class="header-toggle-divider"
      />
      <label
        class="toggle"
      >
        <input
          aria-label="Kid Shelf"
          data-testid="kid-shelf-toggle"
          type="checkbox"
        />
        Kid Shelf
      </label>
    </header>
    <div
      class="controls-row"
    >
      <section
        aria-label="Quick Generate"
        class="quick-generate-card"
        data-testid="quick-generate-card"
      >
        <h2>
          Quick Generate
        </h2>
        <div
          class="form-group"
        >
          <label
            for="child-name"
          >
            Child name
          </label>
          <input
            data-testid="child-name-input"
            id="child-name"
            name="childName"
            placeholder="Dreamer"
            type="text"
            value="Dreamer"
          />
        </div>
        <div
          class="form-group"
        >
          <label
            for="duration"
          >
            Duration (6 min)
          </label>
          <div
            class="slider-container"
          >
            <div
              class="slider-track"
            >
              <span
                class="slider-bound"
              >
                5 min
              </span>
              <input
                aria-label="Duration"
                aria-valuetext="6 minutes"
                data-testid="duration-slider"
                id="duration"
                max="15"
                min="5"
                step="1"
                style="--slider-progress: 10%;"
                type="range"
                value="6"
              />
              <span
                class="slider-bound"
              >
                15 min
              </span>
            </div>
          </div>
        </div>
        <div
          class="form-group"
        >
          <label
            for="mode"
          >
            Mode
          </label>
          <select
            data-testid="mode-select"
            id="mode"
          >
            <option
              value="series"
            >
              Series
            </option>
            <option
              value="one-shot"
            >
              One-shot
            </option>
          </select>
        </div>
        <label
          class="toggle"
        >
          <input
            aria-label="Reduced motion"
            data-testid="reduced-motion-toggle"
            type="checkbox"
          />
          Reduced motion
        </label>
        <button
          class="btn-primary"
          data-testid="generate-story-button"
          type="button"
        >
          <span
            aria-hidden="true"
            class="sparkle"
          >
            ✨ 
          </span>
          Generate story
        </button>
      </section>
      <section
        aria-label="Parent controls"
        class="parent-controls-card"
        data-testid="parent-controls-section"
      >
        <h3
          class="parent-controls-heading"
        >
          <span
            aria-hidden="true"
            class="lock-icon"
          >
            🔒
          </span>
          Parent Controls
        </h3>
        <div
          class="parent-controls-row"
        >
          <button
            class="btn-parent-gate"
            data-testid="unlock-parent-settings-button"
            type="button"
          >
            Verify parent with passkey
          </button>
        </div>
        <label
          class="toggle"
        >
          <input
            aria-label="Notifications enabled"
            data-testid="notifications-toggle"
            disabled=""
            type="checkbox"
          />
          Notifications enabled
        </label>
        <p
          class="toggle-disabled-hint"
        >
          Verify parent identity to change this setting
        </p>
        <label
          class="toggle"
        >
          <input
            aria-label="Analytics enabled"
            data-testid="analytics-toggle"
            disabled=""
            type="checkbox"
          />
          Analytics enabled
        </label>
        <p
          class="toggle-disabled-hint"
        >
          Verify parent identity to change this setting
        </p>
      </section>
    </div>
    <section
      aria-label="Recent stories"
      class="shelf"
      data-testid="recent-stories-shelf"
    >
      <h3>
        Recent
      </h3>
      <ul>
        <li
          class="story-card"
          data-testid="recent-story-story-123"
        >
          <div
            class="story-layout"
          >
            <div
              aria-label="Poster preview for Ari and the Moonlit Meadow"
              class="poster-parallax"
              role="img"
            >
              <div
                class="poster-layer"
                style="background-image: url("data:image/svg+xml;base64,PHN2Zy8+"); animation-duration: 120s; animation-delay: 0.06666666666666667s; transform: translate3d(0, 0, 1px);"
              />
              <div
                class="poster-layer"
                style="background-image: url("data:image/svg+xml;base64,PHN2Zy8+"); animation-duration: 24s; animation-delay: 0.3333333333333333s; transform: translate3d(0, 0, 4px);"
              />
              <div
                class="poster-layer"
                style="background-image: url("data:image/svg+xml;base64,PHN2Zy8+"); animation-duration: 18.46153846153846s; animation-delay: 0.43333333333333335s; transform: translate3d(0, 0, 5px);"
              />
            </div>
            <div
              class="story-summary"
            >
              <strong>
                Ari and the Moonlit Meadow
              </strong>
              <span
                class="series-progress"
                data-testid="recent-story-series-progress-story-123"
              >
                Moonlit Meadow · Episode 1
              </span>
              <small>
                Previously: calm winds.
              </small>
              <div
                class="audio-stack"
              >
                <audio
                  aria-label="Teaser narration for Ari and the Moonlit Meadow"
                  controls=""
                  data-testid="recent-story-teaser-audio-story-123"
                  preload="none"
                  src="data:audio/wav;base64,AAA="
                />
              </div>
            </div>
          </div>
          <div
            class="story-actions"
          >
            <button
              data-testid="recent-story-approve-story-123"
              type="button"
            >
              Approve full narration
            </button>
            <button
              data-testid="recent-story-toggle-favorite-story-123"
              type="button"
            >
              Favorite
            </button>
          </div>
        </li>
      </ul>
    </section>
    <section
      aria-label="Favorite stories"
      class="shelf"
      data-testid="favorite-stories-shelf"
    >
      <h3>
        Favorites
      </h3>
      <div
        class="empty-state"
      >
        <span
          aria-hidden="true"
          class="empty-state-icon"
        >
          ⭐
        </span>
        <p>
          Star your favorites to find them here!
        </p>
      </div>
      <ul />
    </section>
  </main>
</DocumentFragment>
`;

exports[`App > matches the quick generate visual baseline 1`] = `
<DocumentFragment>
  <main
    class="app-shell"
    data-testid="app-shell"
  >
    <header
      class="header"
      data-testid="app-header"
    >
      <div
        class="header-brand"
      >
        <img
          alt=""
          aria-hidden="true"
          class="header-brand-icon"
          src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%20128%20128'%20role='img'%20aria-label='StoryTime'%3e%3crect%20width='128'%20height='128'%20rx='24'%20fill='%231f1d5c'/%3e%3cpath%20d='M36%2078c8-18%2020-27%2036-27%208%200%2016%203%2020%208-5-16-18-27-35-27-18%200-33%2013-36%2031-1%205-1%2010%201%2015l14%200z'%20fill='%23f6c86d'/%3e%3ccircle%20cx='88'%20cy='42'%20r='10'%20fill='%23ffe8b6'/%3e%3cpath%20d='M50%2088h32c0%206-5%2010-11%2010H61c-6%200-11-4-11-10z'%20fill='%23ffffff'/%3e%3c/svg%3e"
        />
        <h1>
          StoryTime
        </h1>
        <span
          class="tier-badge"
          data-testid="tier-badge"
        >
          Trial
        </span>
      </div>
      <div
        class="header-toggle-divider"
      />
      <label
        class="toggle"
      >
        <input
          aria-label="Kid Shelf"
          data-testid="kid-shelf-toggle"
          type="checkbox"
        />
        Kid Shelf
      </label>
    </header>
    <div
      class="controls-row"
    >
      <section
        aria-label="Quick Generate"
        class="quick-generate-card"
        data-testid="quick-generate-card"
      >
        <h2>
          Quick Generate
        </h2>
        <div
          class="form-group"
        >
          <label
            for="child-name"
          >
            Child name
          </label>
          <input
            data-testid="child-name-input"
            id="child-name"
            name="childName"
            placeholder="Dreamer"
            type="text"
            value="Dreamer"
          />
        </div>
        <div
          class="form-group"
        >
          <label
            for="duration"
          >
            Duration (6 min)
          </label>
          <div
            class="slider-container"
          >
            <div
              class="slider-track"
            >
              <span
                class="slider-bound"
              >
                5 min
              </span>
              <input
                aria-label="Duration"
                aria-valuetext="6 minutes"
                data-testid="duration-slider"
                id="duration"
                max="15"
                min="5"
                step="1"
                style="--slider-progress: 10%;"
                type="range"
                value="6"
              />
              <span
                class="slider-bound"
              >
                15 min
              </span>
            </div>
          </div>
        </div>
        <div
          class="form-group"
        >
          <label
            for="mode"
          >
            Mode
          </label>
          <select
            data-testid="mode-select"
            id="mode"
          >
            <option
              value="series"
            >
              Series
            </option>
            <option
              value="one-shot"
            >
              One-shot
            </option>
          </select>
        </div>
        <label
          class="toggle"
        >
          <input
            aria-label="Reduced motion"
            data-testid="reduced-motion-toggle"
            type="checkbox"
          />
          Reduced motion
        </label>
        <button
          class="btn-primary"
          data-testid="generate-story-button"
          type="button"
        >
          <span
            aria-hidden="true"
            class="sparkle"
          >
            ✨ 
          </span>
          Generate story
        </button>
      </section>
      <section
        aria-label="Parent controls"
        class="parent-controls-card"
        data-testid="parent-controls-section"
      >
        <h3
          class="parent-controls-heading"
        >
          <span
            aria-hidden="true"
            class="lock-icon"
          >
            🔒
          </span>
          Parent Controls
        </h3>
        <div
          class="parent-controls-row"
        >
          <button
            class="btn-parent-gate"
            data-testid="unlock-parent-settings-button"
            type="button"
          >
            Verify parent with passkey
          </button>
        </div>
        <label
          class="toggle"
        >
          <input
            aria-label="Notifications enabled"
            data-testid="notifications-toggle"
            disabled=""
            type="checkbox"
          />
          Notifications enabled
        </label>
        <p
          class="toggle-disabled-hint"
        >
          Verify parent identity to change this setting
        </p>
        <label
          class="toggle"
        >
          <input
            aria-label="Analytics enabled"
            data-testid="analytics-toggle"
            disabled=""
            type="checkbox"
          />
          Analytics enabled
        </label>
        <p
          class="toggle-disabled-hint"
        >
          Verify parent identity to change this setting
        </p>
      </section>
    </div>
    <section
      aria-label="Recent stories"
      class="shelf"
      data-testid="recent-stories-shelf"
    >
      <h3>
        Recent
      </h3>
      <div
        class="empty-state"
      >
        <span
          aria-hidden="true"
          class="empty-state-icon"
        >
          🌙
        </span>
        <p>
          Generate your first bedtime adventure!
        </p>
      </div>
      <ul />
    </section>
    <section
      aria-label="Favorite stories"
      class="shelf"
      data-testid="favorite-stories-shelf"
    >
      <h3>
        Favorites
      </h3>
      <div
        class="empty-state"
      >
        <span
          aria-hidden="true"
          class="empty-state-icon"
        >
          ⭐
        </span>
        <p>
          Star your favorites to find them here!
        </p>
      </div>
      <ul />
    </section>
  </main>
</DocumentFragment>
`;
